GitVersion1/objects/Potential__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Master_Potential__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animals_cycle__c</fullName>
        <label>Animals / Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animals_yr__c</fullName>
        <label>Animals / yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CFE_CON__c</fullName>
        <label>Annual CFE 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CFE__c</fullName>
        <label>Annual CFE 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_MT__c</fullName>
        <label>Annual Volume (MT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <label>Annual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFE_incl__c</fullName>
        <label>CFE incl %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFE_kg_animal_cycle__c</fullName>
        <label>CFE kg / animal / cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalculationKey__c</fullName>
        <formula>TEXT( Master_Potential__r.Estimation_Type__c) +  TEXT( Master_Potential__r.Species__c ) +  TEXT( Product_Function__c )+  TEXT( Type__c )</formula>
        <label>CalculationKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Category__c</fullName>
        <label>Calculation Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>CFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculation_type__c</fullName>
        <formula>Text(Master_Potential__r.Estimation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculation type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Key__c</fullName>
        <formula>TEXT( Product_Function__c ) + TEXT( Type__c ) +  Master_Potential__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycles_yr__c</fullName>
        <label>Cycles / yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Fed_yr__c</fullName>
        <label>Days Fed / yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <formula>parentAccount__c + TEXT( Master_Potential__r.Estimation_Type__c) + TEXT( Master_Potential__r.Species__c ) + TEXT( Product_Function__c )+ TEXT( Type__c ) + Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Potential__c</fullName>
        <label>Master Potential</label>
        <referenceTo>Cres_Master_Potential__c</referenceTo>
        <relationshipLabel>Potentials</relationshipLabel>
        <relationshipName>Potentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Potential_Check__c</fullName>
        <formula>TEXT( TypeOfCalculation__c ) + &quot; &quot; + &quot;-&quot; + &quot; &quot; + TEXT( Species__c ) + &quot; &quot; + &quot;-&quot; + &quot; &quot; + TEXT( Product_Function__c ) + &quot; &quot; + &quot;-&quot; + &quot; &quot; + TEXT( Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Function__c</fullName>
        <label>Product Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Species__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Creep</fullName>
                </value>
                <value>
                    <fullName>Pre-Starter</fullName>
                </value>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Other Piglet</fullName>
                </value>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Finisher</fullName>
                </value>
                <value>
                    <fullName>Sow</fullName>
                </value>
                <value>
                    <fullName>Sow Gestation</fullName>
                </value>
                <value>
                    <fullName>Lactation</fullName>
                </value>
                <value>
                    <fullName>Boar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Heifer</fullName>
                </value>
                <value>
                    <fullName>Dry Cow</fullName>
                </value>
                <value>
                    <fullName>Lactating Meat</fullName>
                </value>
                <value>
                    <fullName>Breeder</fullName>
                </value>
                <value>
                    <fullName>Grower/Finisher</fullName>
                </value>
                <value>
                    <fullName>Pullet</fullName>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Milk replacers</fullName>
                </value>
                <value>
                    <fullName>Cow Calf</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <label>Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Species_Formula__c</fullName>
        <formula>Text(Master_Potential__r.Species__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Species_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Small Ruminants</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Broiler</fullName>
                </value>
                <value>
                    <fullName>Layers</fullName>
                </value>
                <value>
                    <fullName>Other Poultry</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Ducks</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Ingredient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Milk replacers</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                    <isActive>false</isActive>
                    <label>Deer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Potentials</relationshipLabel>
        <relationshipName>Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_consumption_complete_feed_MT__c</fullName>
        <label>Total consumption complete feed  [MT]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeOfCalculation__c</fullName>
        <label>TypeOfCalculation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Calculation_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Simple Potential Estimate</fullName>
                </value>
                <value>
                    <fullName>Cycle Consumption</fullName>
                </value>
                <value>
                    <fullName>Daily Animal Consumption</fullName>
                </value>
                <value>
                    <fullName>Simple Potential Estimate - CFE</fullName>
                </value>
                <value>
                    <fullName>Cycle Consumption - CFE</fullName>
                </value>
                <value>
                    <fullName>Daily Animal Consumption - CFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Concentrate</fullName>
                </value>
                <value>
                    <fullName>Premix</fullName>
                </value>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>Basemix</fullName>
                </value>
                <value>
                    <fullName>Other Specialties</fullName>
                </value>
                <value>
                    <fullName>Protein Treatment</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_CFE_MT__c</fullName>
        <label>Value / CFE MT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_CFE__c</fullName>
        <label>Value / CFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_MT__c</fullName>
        <label>Value / MT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCompetitor__c</fullName>
        <formula>IF(  UPPER(Competitor__c) = &apos;CARGILL&apos; , false, true)</formula>
        <label>isCompetitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kg_animal_cycle__c</fullName>
        <label>kg / animal / cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kg_hd_day__c</fullName>
        <label>kg / hd / day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parentAccount__c</fullName>
        <label>parentAccount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentaccountFormula__c</fullName>
        <formula>Master_Potential__r.Account__r.Id</formula>
        <label>parentaccountFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>share__c</fullName>
        <label>% share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Potential</label>
    <nameField>
        <label>Potential  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential</pluralLabel>
    <recordTypes>
        <fullName>Cycle_Consumption</fullName>
        <active>true</active>
        <label>Cycle Consumption</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cycle_Consumption_CFE</fullName>
        <active>true</active>
        <label>Cycle Consumption - CFE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Daily_Animal_Consumption</fullName>
        <active>true</active>
        <label>Daily Animal Consumption</label>
    </recordTypes>
    <recordTypes>
        <fullName>Daily_Animal_Consumption_CFE</fullName>
        <active>true</active>
        <label>Daily Animal Consumption - CFE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple_Potential_Estimate</fullName>
        <active>true</active>
        <label>Simple Potential Estimate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple_Potential_Estimate_CFE</fullName>
        <active>true</active>
        <label>Simple Potential Estimate - CFE</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>